--- a/views/bill/new.ejs
+++ b/views/bill/new.ejs
@@ -18,7 +18,7 @@
     </div>
     <div id="fields-container"></div>
     <div class="mb-5">
-        <button type="button" class="btn btn-sm btn-primary" id="add-more"><i class="fa fa-add"></i></button>
+        <button type="button" class="btn btn-sm btn-primary" id="add-more"><i class="fa fa-plus"></i></button>
     </div>
     <div class="my-3">
         <button type="submit" class="btn btn-success">Proceed</button>
