--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -1,11 +1,12 @@
 <%- layout('layouts/boilerplate') %>
 
+<a href="/users/new" class="mb-5">New user</a>
 
 <% if(!users.length){ %>
     <h4>No users in database</h4>
     <p class="lead">Add user <a href="/users/new">here</a></p>
 <% }else{ %>
-    <div class="table-responsive">
+    <div class="table-responsive my-4">
         <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
             <thead>
                 <tr>
@@ -24,7 +25,9 @@
                         <td><%= user.email %> </td>
                         <td><%= String(user.created_at).slice(0, 15) %> </td>
                         <td>
-                            <button class="btn btn-success btn-sm"  type="button" data-bs-toggle="modal" data-bs-target="#update<%=user._id%>">Modify</button>
+                            <button type="button" class="btn btn-success btn-sm" data-toggle="modal" data-target="#update<%=user._id%>">
+                                modify
+                            </button>
                         </td>
                     </tr>
                     <!-- edit modal -->
@@ -33,7 +36,7 @@
                         <div class="modal-content">
                             <div class="modal-header">
                             <h5 class="modal-title" id="exampleModalLabel">Edit <%= user.username %> </h5>
-                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><i class="fa fa-times"></i></button>
                             </div>
                             <div class="modal-body">
                                 <form action="/users/<%=user._id%>?_method=PATCH" method="post">
@@ -52,12 +55,12 @@
                                     </div>
                                     <button class="btn btn-success">Update</button>
                                     <hr>
-                                    <div class="my-4">
-                                        <form class="d-inline" action="/users/<%=user._id%>?_method=DELETE" method="post">
-                                            <button class="btn btn-danger">Delete</button>
-                                        </form>
-                                    </div>
                                 </form>
+                                <div class="my-4">
+                                    <form class="d-inline" action="/users/<%=user._id%>?_method=DELETE" method="post">
+                                        <button class="btn btn-danger">Delete</button>
+                                    </form>
+                                </div>
                             </div>
                         </div>
                         </div>
