--- a/views/users/new.ejs
+++ b/views/users/new.ejs
@@ -3,20 +3,20 @@
 <form action="/users" method="post" class="form-size">
     <h2 class="mb-4">Add new user</h2>
     <div class="form-floating mb-3">
-        <input type="text" class="form-control" id="username" required name="username" placeholder="username" minlength="5" maxlength="50">
         <label for="username">Username</label>
+        <input type="text" class="form-control" id="username" required name="username"  minlength="5" maxlength="50">
     </div>
     <div class="form-floating mb-3">
-        <input type="email" class="form-control" id="email" minlength="5" maxlength="60" name="email" placeholder="email">
         <label for="email">Email</label>
+        <input type="email" class="form-control" id="email" minlength="5" maxlength="60" name="email">
     </div>
     <div class="form-floating mb-3">
-        <input type="password" class="form-control" id="password" minlength="5" maxlength="60" name="password" placeholder="password">
         <label for="password">Password</label>
+        <input type="password" class="form-control" id="password" minlength="5" maxlength="60" name="password">
     </div>
     <div class="form-floating mb-3">
-        <input type="password" class="form-control" id="confirm_password" minlength="5" maxlength="60" name="confirm_password" placeholder="password">
         <label for="confirm_password">Confirm Password</label>
+        <input type="password" class="form-control" id="confirm_password" minlength="5" maxlength="60" name="confirm_password">
     </div>
     <div class="mb-3">
         <button type="submit" class="btn btn-success btn-lg m-3">Add</button>
